# Rail

./: .gitignore  LICENSE  README.md  RESEARCH_PAPER.md  pyproject.toml  requirements.txt
.github/workflows/: autonomous_research.yml
data/: knowledge_base.json  literature_review.json  metrics.json  pipeline_report.json  research_plan.json
data/simulation_results/: combined_risk_surface.json  irregularity_sweep.json  load_sweep.json  speed_sweep.json  wheelset_dynamics.json
scripts/: run_pipeline.py
src/: __init__.py
src/agent/: __init__.py  planning_engine.py  research_agent.py  workflow_controller.py
src/analysis/: __init__.py  metrics.py  visualization.py
src/paper/: __init__.py  mit_paper_generator.py
src/paper/templates/: mit_template.md
src/research/: __init__.py  knowledge_extraction.py  literature_review.py  tavily_client.py
src/simulations/: __init__.py  derailment_probability.py  scenario_runner.py  wheel_rail_dynamics.py
tests/: __init__.py  test_agent.py  test_research_pipeline.py  test_simulations.py
